DOCKERZE THE BACKEND (springboot) Dokerize the frontend (Angular)